--- a/common/intsigVIP.conf
+++ b/common/intsigVIP.conf
@@ -1,4 +1,4 @@
-# hostname = *.intsig.net,
-hostname = api.intsig.net, api-cs.intsig.net,api-cs-cn.intsig.net,
+hostname = *.intsig.net,
+# hostname = api.intsig.net, api-cs.intsig.net,api-cs-cn.intsig.net,
 # 扫描全能王 VIP
 ^https:\/\/(api|api-cs|api-cs-cn)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/camscanner.js
